Fixed popout window flickering, added stores and actions for media playback and the current user

--- a/src/style.css
+++ b/src/style.css
@@ -85,6 +85,7 @@ a {
 
 #login-container {
 	display: flex;
+	align-items: center;
 	width: 100%;
 	height: 100%;
 }
@@ -428,6 +429,14 @@ button.vmenu-toggle:hover {
 	width: 100% !important;
 }
 
+#vid-wrap: {
+	position: fixed;
+	width: 100% !important;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+}
+
 #vid-container {
 	display: none;
 	position: absolute;
@@ -534,13 +543,16 @@ button.vmenu-toggle:hover {
 
 #overlay-info {
 	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	margin: 20px;
+	position: absolute;
+	top: 10px;
+	left: 10px;
 	padding: 10px 15px;
 	background: rgba(0,0,0,0.75);
 	z-index: 1000;
+}
+
+.fs #overlay-info {
+	position: fixed;
 }
 
 #vid-container:not(.fs) #overlay-info {
@@ -1267,6 +1279,7 @@ button.vmenu-toggle:hover {
 }
 
 #demo {
+	display: none;
 	text-align: center;
 	color: #666;
 	cursor: pointer;
